[workspace]
members = [
    "core"
]
resolver = "2"

[workspace.package]
authors = ["wuliya <3369906077@qq.com>"]
license = "GPL-3"
readme = "README.md"
homepage = "https://github.com/puniyu/puniyu-node"
repository = "https://github.com/puniyu/puniyu-node"
edition = "2024"
rust-version = "1.88.0"

[profile.release]
lto = "thin"
incremental = false

[profile.dev]
incremental = true